# nix-pretty

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md  build.sh  jhsware-code.yaml  shell.nix
.github/workflows/: audit.yml
nix/: sources.json
src/: lib.rs  main.rs  pty.rs  rewriter.rs
